<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_devotional"
            android:icon="@drawable/ic_today_black_48dp"
            android:title="@string/devotional"/>
        <item
            android:id="@+id/nav_bible_ot"
            android:icon="@drawable/ic_library_books_black_48dp"
            android:title="@string/old_testament" />
        <item
            android:id="@+id/nav_bible_nt"
            android:icon="@drawable/ic_library_books_black_48dp"
            android:title="@string/read_new_testament" />
        <!--<item-->
            <!--android:id="@+id/nav_hymnal"-->
            <!--android:icon="@drawable/ic_audiotrack_black_48dp"-->
            <!--android:title="@string/hymns" />-->
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_speaker_notes_black_48dp"
            android:title="@string/notes"/>

        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/settings" />-->
    </group>

    <item android:title="@string/developers">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_48dp"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_theme"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/settings" />
</menu>
