<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />


    <item
        android:id="@+id/action_translate"
        android:icon="@drawable/ic_translate_white_48dp"
        android:title="@string/translate"
        app:showAsAction="ifRoom">
        <menu>
            <item android:title="@string/shona"
                android:id="@+id/action_language_shona"/>
            <item android:title="@string/english"
                android:id="@+id/action_language_english" />
        </menu>
    </item>
    <!--<item-->
        <!--android:id="@+id/action_night_mode"-->
        <!--android:title="@string/day_night"-->
        <!--app:showAsAction="never" />-->

    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->
</menu>
